asking -> that asks

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -574,7 +574,7 @@ of the same crate:
 \end{itemize}
 the tool uses Trustfall as a layer of abstraction that remains constant regardless of changes in the underlying JSON representation format
 (functions, structs, enums, variants, etc.). To better visualize this concept, one can imagine a query
-asking Trustfall to ,,find all public Enums from the baseline version that no longer exist in the
+that asks Trustfall to ,,find all public Enums from the baseline version that no longer exist in the
 current version of the crate''. That kind of query never makes any statements or assumptions about its data
 representation or format.
 
