--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -588,14 +588,6 @@ and clear information about the error they have made.
 In cargo-semver-checks, each lint contains a single \texttt{SemverQuery} to execute, consisting of
 the following fields:
 
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=\linewidth]{lint-example.png}
-	\caption{The \texttt{enum\_missing} lint (for its entire query, see figure
-		\ref{fig:enum_missing_lint_query})}
-	\label{fig:enum_missing_lint}
-\end{figure}
-
 \begin{itemize}
 	\item \texttt{id} -- a short, unique name identifying the lint, most often matching the
 		filename that contains the lint,
@@ -613,16 +605,16 @@ the following fields:
 	    its exact position in the code.
 \end{itemize}
 
-Each query defines the filtering rules necessary to compare the baseline and current versions of
-a crate. Consider the following example:
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=\linewidth]{lint-query-example.png}
-	\caption{The \texttt{enum\_missing} lint's query}
-	\label{fig:enum_missing_lint_query}
+	\includegraphics[width=\linewidth]{lint-example.png}
+	\caption{The \texttt{enum\_missing} lint (for its entire query, see figure
+		\ref{fig:enum_missing_lint_query})}
+	\label{fig:enum_missing_lint}
 \end{figure}
-The query above is part of the lint seen in figure \ref{fig:enum_missing_lint}. It contains
-elements such as:
+
+Each query defines the filtering rules necessary to compare the baseline and current versions of
+a crate. They contain elements such as:
 \begin{itemize}
 	\item \texttt{@tag} -- allows the value to be used elsewhere in the query by
 		tagging its name,
@@ -637,7 +629,16 @@ elements such as:
 		name,
 	\item \texttt{\%path} -- \texttt{\%} refers to a tagged element with the same name.
 \end{itemize}
-Thus, during its execution, Trustfall successively:
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{lint-query-example.png}
+	\caption{The \texttt{enum\_missing} lint's query}
+	\label{fig:enum_missing_lint_query}
+\end{figure}
+
+The query above is part of the lint seen in figure \ref{fig:enum_missing_lint}. During
+its execution, Trustfall successively:
 \begin{itemize}
 	\item collects all of the baseline crate's public Enums, tagging their paths,
 	\item collects all of the current crate's public Enums such that their path is present among
