--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1,5 +1,7 @@
 \documentclass[licencjacka,en]{pracamgr}
 \usepackage{hyperref}
+\usepackage{graphicx}
+\graphicspath{ {./images/} }
 
 \autor{Tomasz Nowak}{429575}
 \autori{Michał Staniewski}{429598}
@@ -527,50 +529,186 @@ which often prevented the community from adopting the tool into their workflow:
 
 \chapter{Theory}\label{r:chapter_theory}
 
-\section{Project structure}\label{r:section_projectstructure}
+\section{Project structure}\label{r:section_project_structure}
 
-TODO:
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{project-structure-diagram.png}
+	\caption{Diagram of the project structure}
+\end{figure}
+
+In order to check two versions of a crate for semver violations, the tool needs a consistent method
+for generating the data to be compared. This is achieved by using rustdoc (from the official
+Rust toolchain) to generate the documentation for Rust projects. However, the documentation itself
+often changes its format and thus is not stable nor organized enough to be directly used by
+cargo-semver-checks. For this reason, the tool uses Trustfall to access and query the output
+received from rustdoc.
+
+Trustfall is a special query engine, designed to query any data source or a combination of data
+sources such as APIs, raw files (JSON, CSV, etc.), git version control, webpages and many more.
+Its main idea is to represent the data as an organised graph with vertices and edges that the
+engine can traverse. To navigate during the search, it follows consecutive filtering rules defined
+by the user. In cargo-semver-checks, these rules are contained within \texttt{.ron} files which
+are called \texttt{lints} inside the project (more detail in section
+\ref{r:section_cargo_semver_checks}).
+
+Despite being the project's core component, new lints are not the only thing we developed. In total
+there are four repositories that we have been actively contributing to for the last few months:
 \begin{itemize}
-	\item explain that the tool heavily uses rustdocs
-	\item explain that it parses rustdoc through Trustfall
-	\item define Trustfall
-	\item explain how the lints look like
-	\item mention that the project is split into three sub-projects,
-		in this order: cargo-semver-checks, trustfall-rustdoc-adapter, trustfall-rustdoc,
-		cargo-semver-checks-action,
-		and briefly define what they do (like in our docs)
+	\item \textbf{cargo-semver-checks} -- a CLI (Command Line Interface) tool that runs the lints
+		(Trustfall queries),
+	\item \textbf{trustfall-rustdoc-adapter} -- implements the Trustfall interface for one specific
+		rustdoc version,
+	\item \textbf{trustfall-rustdoc} -- allows running Trustfall queries over rustdoc regardless of
+		the currently used rustdoc version,
+	\item \textbf{cargo-semver-checks-action} -- the tool in form of a GitHub Action that can
+	    be added to GitHub repositories.
 \end{itemize}
 
-\section{cargo-semver-checks}
+\section{cargo-semver-checks}\label{r:section_cargo_semver_checks}
 
-TODO:
+The goal of cargo-semver-checks is to detect semver violations within Rust crates. Given two
+versions of the same crate:
 \begin{itemize}
-	\item describe in detail what is the job of cargo-semver-checks, without the adapters
-	\item describe its different usages and how they retrieve the necessary data
+	\item \textbf{baseline} -- the existing version that defines a public API,
+	\item \textbf{current} -- the modified version of the baseline that is vulnerable to
+		breaking semver,
 \end{itemize}
+the tool uses Trustfall as a layer of abstraction that remains constant regardless of changes in
+the underlying JSON representation format (functions, structs, enums, variants, etc.) To better
+visualize this concept, one can imagine a query that asks Trustfall to ,,find all public Enums from
+the baseline version that no longer exist in the current version of the crate''. That kind of query
+never makes any statements or assumptions about its data representation or format.
+
+After that, the versions are compared using all of the implemented lints to find the breaking
+public API changes. They are the core component of the project and are carefully designed so that
+one break can only be reported by one, precise lint. This is especially important because we want
+the user to be provided with an extensive, coherent and clear information about the error they
+have made.
+
+In cargo-semver-checks, each lint contains a single \texttt{SemverQuery} to execute, consisting of
+the following fields:
+
+\begin{itemize}
+	\item \texttt{id} -- a short, unique name identifying the lint, most often matching the
+		filename that contains the lint,
+	\item \texttt{human\_readable\_name} -- a longer, human-readable name,
+	\item \texttt{description} -- general information about what is the detected problem,
+	\item \texttt{required\_update} -- the minimum version bump needed to avoid breaking semver,
+	\item \texttt{reference\_link} -- a link to the official Rust documentation corresponding to
+		the issue (when available),
+	\item \texttt{query} -- the Trustfall filtering rules responsible for comparing two versions and
+		detecting semver violations (described below in more detail),
+	\item \texttt{arguments} -- optional, user-defined Trustfall constants for the query,
+	\item \texttt{error\_message} -- a longer and more technical information, telling the user
+	    about the exact semver violation that occured and what could have caused it,
+	\item \texttt{per\_result\_error\_template} -- the name of the item that broke semver and
+	    its exact position in the code.
+\end{itemize}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{lint-example.png}
+	\caption{The \texttt{enum\_missing} lint (for its entire query, see figure
+		\ref{fig:enum_missing_lint_query})}
+	\label{fig:enum_missing_lint}
+\end{figure}
+
+Each query defines the filtering rules necessary to compare the baseline and current versions of
+a crate. They contain elements such as:
+\begin{itemize}
+	\item \texttt{@tag} -- allows the value to be used elsewhere in the query by
+		tagging its name,
+	\item \texttt{@filter}, \texttt{@fold}, \texttt{@transform} -- some of the available Trustfall
+		directives that modify the sets of items processed by the query,
+	\item \texttt{@output} -- specifies which values are returned by the query,
+	\item \texttt{@optional} -- edges marked optional are allowed to not exist, in which case
+		\texttt{@output} properties within become \texttt{null} instead of causing that result
+		to be discarded,
+	\item \texttt{... on Enum} -- \texttt{...} narrows that location in the query to the specified
+		kind of items (in this case Enums), discarding all results that had other types of data
+		in that location
+	\item \texttt{\$public}, \texttt{\$zero} -- \texttt{\$} refers to the argument with the same
+		name,
+	\item \texttt{\%path} -- \texttt{\%} refers to a tagged element with the same name.
+\end{itemize}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{lint-query-example.png}
+	\caption{The \texttt{enum\_missing} lint's query}
+	\label{fig:enum_missing_lint_query}
+\end{figure}
+
+The query above is part of the lint seen in figure \ref{fig:enum_missing_lint}.
+During its execution, Trustfall successively:
+\begin{itemize}
+	\item collects all of the baseline crate's public Enums, tagging their paths,
+	\item collects all of the current crate's public Enums such that their path is present among
+		the baseline version's tagged paths,
+	\item counts the occurences of the filtered current Enums among the filtered baseline Enums,
+	\item filters the current Enums by their resulting count being zero,
+	\item returns the Enums that passed the last filtering.
+\end{itemize}
+Just like that, the query has returned all of the public Enums that were present in the baseline
+version of the crate, but got removed in the current version.
 
 \section{trustfall-rustdoc-adapter}
-
-TODO:
+The output generated by running rustdoc on a crate is a tree and can be in one of the two formats:
 \begin{itemize}
-	\item describe the purpose of the rustdoc adapter
-	\item mention what a Trustfall must implmement and that the rustdoc adapter
-	\item describe what the adapter does and how trustfall-rustdoc-adapter achieves that
+	\item HTML -- the default option, formatted with CSS, designed for users to read (however it is
+		difficult to parse),
+	\item JSON -- convenient for further processing, but practically unreadable to humans due to its
+		complex structure and large size of up to a few hundred MB.
 \end{itemize}
+This makes the JSON format a~natural candidate for running Trustfall queries. However, it still has
+to be transformed into a~structure that is understandable for Trustfall, namely a~graph in which
+vertices are assigned types and type-dependent properties.
 
-\section{trustfall-adapter}
-
-TODO:
+This is where trustfall-rustdoc-adapter comes in. It provides an interface for querying
+the rustdoc's output by associating JSON nodes with Trustfall vertices. To achieve this, the adapter
+implements the following methods:
 \begin{itemize}
-	\item describe the purpose of the adapter and what it does
+	\item \texttt{resolve\_starting\_vertices} -- returns an iterator over the starting vertices of
+		the graph (entry points for query executions),
+	\item \texttt{resolve\_property} -- resolves the value of a specified vertex' property,
+	\item \texttt{resolve\_neighbors} -- finds the neighboring vertices across an edge,
+	\item \texttt{resolve\_coercion} -- attempts to coerce a vertex into a more specific type.
 \end{itemize}
+These are used by the Trustfall engine to execute lint queries written in the Trustfall language.
+
+\section{trustfall-rustdoc}
+
+Rustdoc output format is under constant development and changes between Rust versions.
+Since the tool is supposed to be widely used, it is important to ensure that it works with
+the recent versions of Rust (and consequently with all recent versions of rustdoc).
+Therefore, the trustfall-rustdoc-adapter is developed on several different git branches,
+each of them handling a~specific rustdoc version.
+
+The trustfall-rustdoc brings them together in the form of a single tool. Given the path to
+the rustdoc JSON output, trustfall-rustdoc loads the file, detects which rustdoc version was used
+and chooses the corresponding trustfall-rustdoc-adapter branch to run the Trustfall queries.
+This provides a version-independent interface which is used by cargo-semver-checks.
 
 \section{cargo-semver-checks-action}
 
-TODO:
-\begin{itemize}
-	\item describe the purpose of this subproject and what it does
-\end{itemize}
+Using cargo-semver-checks in a continuous integration workflow consists of three main steps:
+setting up the Rust toolchain, installing cargo-semver-checks, and finally -- running it on a~crate.
+The aim of the cargo-semver-checks-action is to simplify this process and make it a~single step,
+hiding the technical details from the user.
+
+The cargo-semver-checks-action is implemented as a~GitHub Action, which is a~way of creating
+a reusable GitHub workflow. It is hosted on a public repository and can be used in continuous
+integration by referencing its name and version in the workflow file. Besides being run with default
+parameters, the action can be configured by providing optional inputs (such as the name of the crate
+to check), which are passed to the CLI of the cargo-semver-checks binary.
+
+The V1 version of the action was implemented as a bash script, which was a~quick, but difficult
+to maintain solution, which allowed the action to be run only on Linux hosts. This is why
+we implemented the V2 version of the action in a platform-independent way using TypeScript
+and Node.js, allowing it to be used on all runners supported by GitHub Actions.
+The differences between the V1 and V2 of the action are further discussed in
+\ref{r:section_continuous_integration_improvements}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %           Implementation            %
@@ -583,7 +721,7 @@ TODO:
 	\item change names to ,,why users care about this''
 \end{itemize}
 
-\section{New lints}
+\section{New lints}\label{r:section_new_lints}
 
 <Here write a list about the new lints we've written>
 
@@ -599,7 +737,7 @@ TODO:
 
 <Here write a list about found and fixed bugs>
 
-\section{Continuous integration improvements}
+\section{Continuous integration improvements}\label{r:section_continuous_integration_improvements}
 
 <Here write a list about the V2 of the continuous integration>
 
@@ -1076,6 +1214,18 @@ https://github.com/obi1kenobi/cargo-semver-checks-action/issues/8
 \bibitem{python-pip} Wikipedia,
 	\textit{Python pip} \\
 	https://en.wikipedia.org/wiki/Pip\_(package\_manager)
+
+\bibitem{rustdoc-theory}
+	\textit{The rustdoc book} \\
+	https://doc.rust-lang.org/rustdoc/what-is-rustdoc.html
+
+\bibitem{trustfall}
+	\textit{Trustfall -- Query (Almost) Everything} \\
+	https://github.com/obi1kenobi/trustfall
+
+\bibitem{cargo-semver-checks}
+	\textit{cargo-semver-checks repository} \\
+	https://github.com/obi1kenobi/cargo-semver-checks
 
 \end{thebibliography}
 
