--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -991,7 +991,7 @@ and immediate contact with him through chat).
 			% https://github.com/obi1kenobi/cargo-semver-checks-action/issues/24
 		\end{itemize}
 
-	\item Bartosz:
+	\item Bartosz \cite{responsibilities_bartosz}:
 		\begin{itemize}
 			% \item \emph{SCRIBE!} \\
 			% This scribe was like no other, \\
@@ -1016,20 +1016,14 @@ and immediate contact with him through chat).
 				more specialized files and made the final review process easier. The items that
 				undergo those checks are:
 				\begin{itemize}
-					\item enums \cite{pr_lint_enum_must_use_added},
-					\item structs \cite{pr_lint_struct_must_use_added},
-					\item traits \cite{pr_lint_trait_must_use_added},
-					\item functions \cite{pr_lint_function_must_use_added},
-					\item methods \cite{pr_method_moved_to_trait_must_use_added},
+					\item enums,
+					\item structs,
+					\item traits,
+					\item functions,
+					\item methods,
 					\item inherent methods (reported only when one was both moved to
-						a public trait and marked with the attribute)
-						\cite{pr_inherent_method_must_use_added}.
+						a public trait and marked with the attribute).
 				\end{itemize}
-
-			% Not closed yet:
-			% https://github.com/obi1kenobi/cargo-semver-checks/issues/217
-			% https://github.com/obi1kenobi/cargo-semver-checks/issues/292
-			% https://github.com/obi1kenobi/cargo-semver-checks/issues/294
 
 \end{itemize}
 
@@ -1149,12 +1143,8 @@ https://github.com/obi1kenobi/cargo-semver-checks-action/issues/16
 \bibitem{issue_action_binaries} TODO \\
 https://github.com/obi1kenobi/cargo-semver-checks-action/issues/8
 
-\bibitem{pr_lint_struct_must_use_added} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/279
-\bibitem{pr_lint_trait_must_use_added} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/280
-\bibitem{pr_lint_function_must_use_added} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/281
-\bibitem{pr_lint_enum_must_use_added} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/278
-\bibitem{pr_inherent_method_must_use_added} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/283
-\bibitem{pr_method_moved_to_trait_must_use_added} TODO \\ https://github.com/obi1kenobi/cargo-semver-checks/pull/282
+\bibitem{responsibilities_bartosz} GitHub (2023) \\
+	https://github.com/search?q=org\%3Aobi1kenobi+author\%3ASmolSir&type=issues&s=updated&o=desc
 
 \bibitem{Rust-1} Rust Team,
 	\textit{Rust Programming Language} (2023) \\
